deploy: jfredrickson/jfredrickson.github.io@de2776c480b9c26d31baf8d716c82f6a113cd6de

--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content=""><script type="text/javascript" src="/js/theme.js"></script>
 
-    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.6595a4c3009053bf666bf0136a4e9b8878c57f0fc5b27cdc7f2677985c8df3d6.min.css"><link rel="stylesheet" href="/css/main.css">
+    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.38f70f17e0eba00149240b9caed405849d9a5829c182e76df10fb726df8a094b.min.css"><link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
 
@@ -116,8 +116,15 @@
   </div>
 </div>
 <div class="container">
-  
+  <small class="font-sans">
+    Updated January 13, 2023
+    
+      <i class="fas fa-code-branch text-xs"></i>
+      <a href="https://github.com/jfredrickson/jfredrickson.github.io/commit/5a7eef23971eed3e6722f598e8b9c3a3462ca2cf" class="font-mono">5a7eef2</a>
+    
+  </small>
 </div>
+
 </div>
 <main id="main" class="main flex-grow">
   <div class="container">
