--- a/notes/solaris-7/index.html
+++ b/notes/solaris-7/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content=""><script type="text/javascript" src="/js/theme.js"></script>
 
-    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.6595a4c3009053bf666bf0136a4e9b8878c57f0fc5b27cdc7f2677985c8df3d6.min.css"><link rel="stylesheet" href="/css/main.css">
+    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.38f70f17e0eba00149240b9caed405849d9a5829c182e76df10fb726df8a094b.min.css"><link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
 
@@ -124,9 +124,16 @@
   </div>
 </div>
 <div class="container">
-  <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/retrocomputing/" class="no-underline font-bold text-white dark:text-neutral-200">retrocomputing</a></span>
+  <small class="font-sans">
+    Updated October 19, 2022
+    
+      <i class="fas fa-code-branch text-xs"></i>
+      <a href="https://github.com/jfredrickson/jfredrickson.github.io/commit/721ac66d1e9785520a5436dc6a0f85adc3c0d35a" class="font-mono">721ac66</a>
+    
+  </small><span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/retrocomputing/" class="no-underline font-bold text-white dark:text-neutral-200">retrocomputing</a></span>
 
 </div>
+
 </div>
 <main id="main" class="main flex-grow">
   <div class="container">
