--- a/projects/milesforsmiles/index.html
+++ b/projects/milesforsmiles/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content=""><script type="text/javascript" src="/js/theme.js"></script>
 
-    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.6595a4c3009053bf666bf0136a4e9b8878c57f0fc5b27cdc7f2677985c8df3d6.min.css"><link rel="stylesheet" href="/css/main.css">
+    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.38f70f17e0eba00149240b9caed405849d9a5829c182e76df10fb726df8a094b.min.css"><link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
 
@@ -124,13 +124,20 @@
   </div>
 </div>
 <div class="container">
-  <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/ruby/" class="no-underline font-bold text-white dark:text-neutral-200">ruby</a></span>
+  <small class="font-sans">
+    Updated July 8, 2022
+    
+      <i class="fas fa-code-branch text-xs"></i>
+      <a href="https://github.com/jfredrickson/jfredrickson.github.io/commit/b3b1389985689c8f8c300da37ce43f9e8bf2d101" class="font-mono">b3b1389</a>
+    
+  </small><span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/ruby/" class="no-underline font-bold text-white dark:text-neutral-200">ruby</a></span>
 <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/ruby-on-rails/" class="no-underline font-bold text-white dark:text-neutral-200">ruby-on-rails</a></span>
 <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/responsive-design/" class="no-underline font-bold text-white dark:text-neutral-200">responsive-design</a></span>
 <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/postgresql/" class="no-underline font-bold text-white dark:text-neutral-200">postgresql</a></span>
 <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/heroku/" class="no-underline font-bold text-white dark:text-neutral-200">heroku</a></span>
 
 </div>
+
 </div>
 <main id="main" class="main flex-grow">
   <div class="container">
