--- a/projects/minesweeper/index.html
+++ b/projects/minesweeper/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content=""><script type="text/javascript" src="/js/theme.js"></script>
 
-    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.6595a4c3009053bf666bf0136a4e9b8878c57f0fc5b27cdc7f2677985c8df3d6.min.css"><link rel="stylesheet" href="/css/main.css">
+    <script defer data-domain="ejeff.org" src="https://plausible.tensouth.net/js/script.js"></script><link rel="stylesheet" href="/css/tailwind.38f70f17e0eba00149240b9caed405849d9a5829c182e76df10fb726df8a094b.min.css"><link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
 
@@ -124,10 +124,17 @@
   </div>
 </div>
 <div class="container">
-  <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/javascript/" class="no-underline font-bold text-white dark:text-neutral-200">javascript</a></span>
+  <small class="font-sans">
+    Updated July 8, 2022
+    
+      <i class="fas fa-code-branch text-xs"></i>
+      <a href="https://github.com/jfredrickson/jfredrickson.github.io/commit/ba6b6c4e11ade578bbf564bafc9b8601ed65f2e1" class="font-mono">ba6b6c4</a>
+    
+  </small><span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/javascript/" class="no-underline font-bold text-white dark:text-neutral-200">javascript</a></span>
 <span class="py-0.5 px-1.5 m-0.5 leading-loose bg-secondary-500 dark:bg-secondary-800 font-sans text-xs whitespace-nowrap rounded-sm"><a href="/tags/html5/" class="no-underline font-bold text-white dark:text-neutral-200">html5</a></span>
 
 </div>
+
 </div>
 <main id="main" class="main flex-grow">
   <div class="container">
