deploy: jfredrickson/jfredrickson.github.io@f235b8ff39610a16840868c9889d0dba30487843

--- a/contact/index.html
+++ b/contact/index.html
@@ -184,6 +184,19 @@
       </div>
     </a>
   
+    <a class="flex flex-col p-2 font-sans text-sm dark:border-neutral-700 hover:bg-neutral-100 dark:hover:bg-primary-900" href="https://mastodon.sdf.org/@jf">
+      <div class="flex flex-col items-center md:flex-row md:justify-between">
+        <div>
+          <i class="mr-1 text-neutral-500 fa-brands fa-mastodon" aria-hidden="true"></i>
+          Mastodon
+        </div>
+
+        <div class="font-semibold">
+          @jf@mastodon.sdf.org
+        </div>
+      </div>
+    </a>
+  
 </div>
 
 
